--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -18,3 +18,19 @@ jobs:
 
       - name: Install dependences
         run: yarn install
+
+  unusedexports:
+    name: Find unused exports (dead code)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Cache node_modules
+        uses: actions/cache@v2
+        with: 
+          path: node_modules
+          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+
+      - name: Run ts-prune
+        run: yarn ts-prune --error
