--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -9,9 +9,8 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-
             - uses: actions/checkout@v4
-            
+              name: Instala o node e testa o código enviado 
             - uses: actions/setup-node@v4
               with: 
                 node-version: '20'
