--- a/.github/workflows/test-function.yaml
+++ b/.github/workflows/test-function.yaml
@@ -7,7 +7,9 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
-            - uses: node-setup@v3
+            - uses: actions/setup-node@v3
+              with:
+                  node-version: '23'
             - run: |
                 npm install
                 npm run test
